--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -1,8 +1,15 @@
 time_embedding_size: 128
-grid_size: 64
+grid_size: 50
+
+cosine_schedule:
+  image_factor_min: 0.02
+  image_factor_max: 0.95
 
 training:
   EMA_coeff: 0.99
-  learning_rate: 1e-4
-  weight_decay: 1e-4
+  weight_decay: 0.0001
+  lr_init: 0.0001
+  lr_decay_rate: 0.9
+  lr_decay_steps: 50
   epochs: 40
+  batch_size: 8
